--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,14 @@
     <groupId>com</groupId>
     <artifactId>hospital_project</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>hospital_project</name>
-    <packaging>war</packaging>
+<!--    <name>hospital_project</name>-->
+<!--    <packaging>war</packaging>-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <junit.version>5.7.1</junit.version>
+        <junit.version>5.8.1</junit.version>
     </properties>
 
     <dependencies>
